--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ frontend/MU-VR-Experience/[Ll]ogs/
 frontend/MU-VR-Experience/[Uu]ser[Ss]ettings/
 frontend/MU-VR-Experience/[Mm]emoryCaptures/
 frontend/MU-VR-Experience/[Aa]ssets/AssetStoreTools*
-frontend/MU-VR-Experience/[Aa]ssets/AssetStoreOriginals/_SNAPS_PrototypingAssets/*
+frontend/MU-VR-Experience/[Aa]ssets/AssetStoreOriginals/_SNAPS_PrototypingAssets
 frontend/MU-VR-Experience/[Aa]ssets/AssetStoreOriginals/_SNAPS_PrototypingAssets.meta
 frontend/MU-VR-Experience/[Aa]ssets/AssetStoreOriginals/_SNAPS_Tools
 frontend/MU-VR-Experience/[Aa]ssets/AssetStoreOriginals/_SNAPS_Tools.meta
