--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon server.js"
+        "start": "nodemon server.js",
+        "manual-start": "node server.js"
     },
     "author": "SkinnyDevi",
     "license": "GPL-3.0-or-later",
