Added working video player cinema screen

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ frontend/MU-VR-Experience/[Aa]ssets/ADG_Textures/walls_vol1/wall*
 !frontend/MU-VR-Experience/[Aa]ssets/ADG_Textures/walls_vol1/wall07
 frontend/MU-VR-Experience/[Aa]ssets/ADG_Textures/walls_vol1/wall*.meta
 !frontend/MU-VR-Experience/[Aa]ssets/ADG_Textures/walls_vol1/wall07.meta
+frontend/MU-VR-Experience/Assets/VRAssets/static
+frontend/MU-VR-Experience/Assets/VRAssets/static.meta
 
 
 ## Other
