--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-ws": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
+    "query-string": "^7.1.0",
     "sequelize": "^5.21.6",
     "sequelize-cli": "^5.5.1"
   }
