--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,9 @@
     "express": "^4.17.1",
     "express-ws": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
+    "jsreport": "^3.3.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.6",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^6.4.1"
   }
 }
