--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "jsreport": "^3.3.0",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.7.2",
     "sequelize": "^5.21.6",
     "sequelize-cli": "^6.4.1"
   }
